--- a/test.html
+++ b/test.html
@@ -6,22 +6,276 @@
     <title>320Stylus Homepage</title>
 
     <link rel='stylesheet' href='stylesheets/style.css'>
+
+    <style type='text/css'>
+      body {
+        font-family: Arial;
+        font-size: 14px;
+        padding-top: 2em;
+        padding-bottom: 1em;
+      }
+      .container p {
+        color: #fff;
+        line-height: 100px;
+        background: #55c3dc;
+        text-align: center;
+        margin: 20px 0 0 0;
+      }
+      #logo,#title {
+        text-align: center;
+      }
+      #title h1 {
+        font-size: 4em;
+      }
+    </style>
     
   </head>
   <body>
     <div class='container'>
       <header class='row'>
         <div id=logo class='fourcol left'>
-          <img src='static/logo.png'>
+          <a href='http://ghostbar.github.com/320Stylus'><img src='static/logo.png'></a>
         </div>
 
         <div id='title' class='eightcol last right'>
-          <h1>Anything anyhow</h1>
-          <span class='tagline'>Little tagline</span>
+          <h1>320 Stylus Test HTML</h1>
+          <span class='tagline'>This is a little test, showing how 320Stylus works.</span>
         </div>
       </header>
 
     </div> <!-- End .container -->
+
+
+    <div class="container">
+      <div class="row">
+        <div class="onecol">
+          <p>One</p>
+        </div>
+        <div class="onecol">
+          <p>One</p>
+        </div>
+        <div class="onecol">
+          <p>One</p>
+        </div>
+        <div class="onecol">
+          <p>One</p>
+        </div>
+        <div class="onecol">
+          <p>One</p>
+        </div>
+        <div class="onecol">
+          <p>One</p>
+        </div>
+        <div class="onecol">
+          <p>One</p>
+        </div>
+        <div class="onecol">
+          <p>One</p>
+        </div>
+        <div class="onecol">
+          <p>One</p>
+        </div>
+        <div class="onecol">
+          <p>One</p>
+        </div>
+        <div class="onecol">
+          <p>One</p>
+        </div>
+        <div class="onecol last">
+          <p>One</p>
+        </div>
+      </div>
+    </div>
+
+    <div class="container">
+      <div class="row">
+        <div class="twocol">
+          <p>Two columns</p>
+        </div>
+        <div class="twocol">
+          <p>Two columns</p>
+        </div>
+        <div class="twocol">
+          <p>Two columns</p>
+        </div>
+        <div class="twocol">
+          <p>Two columns</p>
+        </div>
+        <div class="twocol">
+          <p>Two columns</p>
+        </div>
+        <div class="twocol last">
+          <p>Two columns</p>
+        </div>
+      </div>
+    </div>
+
+    <div class="container">
+      <div class="row">
+        <div class="threecol">
+          <p>Three columns</p>
+        </div>
+        <div class="threecol">
+          <p>Three columns</p>
+        </div>
+        <div class="threecol">
+          <p>Three columns</p>
+        </div>
+        <div class="threecol last">
+          <p>Three columns</p>
+        </div>
+      </div>
+    </div>
+
+    <div class="container">
+      <div class="row">
+        <div class="fourcol">
+          <p>Four columns</p>
+        </div>
+        <div class="fourcol">
+          <p>Four columns</p>
+        </div>
+        <div class="fourcol last">
+          <p>Four columns</p>
+        </div>
+      </div>
+    </div>
+
+    <div class="container">
+      <div class="row">
+        <div class="onecol">
+          <p>One</p>
+        </div>
+        <div class="elevencol last">
+          <p>Eleven columns</p>
+        </div>
+      </div>
+    </div>
+
+    <div class="container">
+      <div class="row">
+        <div class="twocol">
+          <p>Two columns</p>
+        </div>
+        <div class="tencol last">
+          <p>Ten columns</p>
+        </div>
+      </div>
+    </div>
+
+    <div class="container">
+      <div class="row">
+        <div class="threecol">
+          <p>Three columns</p>
+        </div>
+        <div class="ninecol last">
+          <p>Nine columns</p>
+        </div>
+      </div>
+    </div>
+
+    <div class="container">
+      <div class="row">
+        <div class="fourcol">
+          <p>Four columns</p>
+        </div>
+        <div class="eightcol last">
+          <p>Eight columns</p>
+        </div>
+      </div>
+    </div>
+
+    <div class="container">
+      <div class="row">
+        <div class="fivecol">
+          <p>Five columns</p>
+        </div>
+        <div class="sevencol last">
+          <p>Seven columns</p>
+        </div>
+      </div>
+    </div>
+
+    <div class="container">
+      <div class="row">
+        <div class="sixcol">
+          <p>Six columns</p>
+        </div>
+        <div class="sixcol last">
+          <p>Six columns</p>
+        </div>
+      </div>
+    </div>
+
+    <div class="container">
+      <div class="row">
+        <div class="sevencol">
+          <p>Seven columns</p>
+        </div>
+        <div class="fivecol last">
+          <p>Five columns</p>
+        </div>
+      </div>
+    </div>
+
+    <div class="container">
+      <div class="row">
+        <div class="eightcol">
+          <p>Eight columns</p>
+        </div>
+        <div class="fourcol last">
+          <p>Four columns</p>
+        </div>
+      </div>
+    </div>
+
+    <div class="container">
+      <div class="row">
+        <div class="ninecol">
+          <p>Nine columns</p>
+        </div>
+        <div class="threecol last">
+          <p>Three columns</p>
+        </div>
+      </div>
+    </div>
+
+    <div class="container">
+      <div class="row">
+        <div class="tencol">
+          <p>Ten columns</p>
+        </div>
+        <div class="twocol last">
+          <p>Two columns</p>
+        </div>
+      </div>
+    </div>
+
+    <div class="container">
+      <div class="row">
+        <div class="elevencol">
+          <p>Eleven columns</p>
+        </div>
+        <div class="onecol last">
+          <p>One</p>
+        </div>
+      </div>
+    </div>
+
+    <div class="container">
+      <div class="row">
+        <div class="threecol">
+          <p>Three columns</p>
+        </div>
+        <div class="sixcol">
+          <p>Six columns</p>
+        </div>
+        <div class="threecol last">
+          <p>Three columns</p>
+        </div>
+      </div>
+    </div>
+
     
   </body>
 </html>
