--- a/test.html
+++ b/test.html
@@ -1,7 +1,8 @@
 <!DOCTYPE HTML>
 <html>
   <head>
-    <meta http-equiv="content-type" content="text/html; charset=utf-8">
+    <meta charset='utf-8'>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <title>320Stylus Homepage</title>
 
